--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-
+<div id="app">
+    <a-button></a-button>
+</div>
+<script src="./dist/bundle.js"></script>
 </body>
 </html>
