--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <div id="app">
     <a-button></a-button>
 </div>
-<script src="./dist/bundle.js"></script>
+<script src="./src/app.js"></script>
 </body>
 </html>
