--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
 <div id="app">
-    <a-button></a-button>
+    <a-button>我没有icon</a-button>
+    <a-button icon="download" icon-position="left">左边</a-button>
+    <a-button icon="download" icon-position="right">右边</a-button>
 </div>
 <script src="./src/app.js"></script>
+<script src="//at.alicdn.com/t/font_957207_1kn80957jpz.js"></script>
 </body>
 </html>
