--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <a-button>我没有icon</a-button>
     <a-button icon="download" icon-position="left">左边</a-button>
     <a-button icon="download" icon-position="right">右边</a-button>
-    <a-icon name="download"></a-icon>
+    <a-button icon="loading" icon-position="right">加载中</a-button>
+    <a-icon name="download" class="loading"></a-icon>
 </div>
 <script src="./src/app.js"></script>
 <script src="//at.alicdn.com/t/font_957207_1kn80957jpz.js"></script>
