--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 </head>
 <body>
 <div id="app">
-    <a-button>我没有icon</a-button>
-    <a-button icon="download" icon-position="left" :loading="loading" @click="loading=!loading">左边</a-button>
-    <a-button icon="download" :loading="true" icon-position="right">右边</a-button>
-    <a-button :loading="true">加载中</a-button>
-    <a-icon name="download" class="loading"></a-icon>
+    <aloe-button>我没有icon</aloe-button>
+    <aloe-button icon="download" icon-position="left" :loading="loading" @click="loading=!loading">左边</aloe-button>
+    <aloe-button icon="download" :loading="true" icon-position="right">右边</aloe-button>
+    <aloe-button :loading="true">加载中</aloe-button>
+    <aloe-button :loading="true" icon-position="right">加载</aloe-button>
+    <aloe-button-group>
+        <aloe-button icon="left">左边</aloe-button>
+        <aloe-button>更多</aloe-button>
+        <aloe-button icon="right" icon-position="right">右边</aloe-button>
+    </aloe-button-group>
 </div>
 <script src="./src/app.js"></script>
 <script src="//at.alicdn.com/t/font_957207_1kn80957jpz.js"></script>
